--- a/app/scss/lib/functions/_all.scss
+++ b/app/scss/lib/functions/_all.scss
@@ -14,3 +14,6 @@
 
 // import files
 @import 'function.color';
+@import 'function.calc-vw';
+@import 'function.calc-rem';
+@import 'function.calc-percentage';
