--- a/app/scss/lib/mixins/_all.scss
+++ b/app/scss/lib/mixins/_all.scss
@@ -12,13 +12,15 @@
 // transitions...............
 
 // import files
-// @import 'mixin.breakpoints';
+@import 'mixin.breakpoints';
 @import	'mixin.fontFace';
 @import	'mixin.alignCenter';
 @import	'mixin.alignVertical';
 @import 'mixin.transitions';
 
 @import 'mixin.vendor-prefixes';
+@import 'mixin.font-size';
+@import 'mixin.line-height';
 @import 'mixin.absolute';
 @import 'mixin.hide';
 @import 'mixin.placeholder';
