--- a/app/scss/settings/_all.scss
+++ b/app/scss/settings/_all.scss
@@ -1,4 +1,5 @@
 //----- Settings
+@import 'settings.dimensions';
 @import 'settings.breakpoints';
 @import 'settings.colors';
 @import 'settings.paths';
