--- a/app/scss/trumps/_all.scss
+++ b/app/scss/trumps/_all.scss
@@ -6,4 +6,6 @@
 @import "trumps.clearfix";
 @import "trumps.hacks";
 @import "trumps.ie";
+@import "trumps.centerBlock";
+@import "trumps.invisible";
 @import "trumps.print";
