--- a/app/scss/components/_all.scss
+++ b/app/scss/components/_all.scss
@@ -1,3 +1,7 @@
 //----- Components
 @import "c-buttons";
 @import "c-pagination";
+@import "c-breadcrumbs";
+
+// Sliders
+@import "c-sliders/c-slick";
