--- a/app/scss/lib/mixins/_all.scss
+++ b/app/scss/lib/mixins/_all.scss
@@ -24,3 +24,5 @@
 @import 'mixin.absolute';
 @import 'mixin.hide';
 @import 'mixin.placeholder';
+@import 'mixin.truncateText';
+@import 'mixin.keyframes';
