--- a/app/scss/settings/_settings.colors.scss
+++ b/app/scss/settings/_settings.colors.scss
@@ -9,8 +9,8 @@
 //-------------------------
 
 //----- Brand Main
-$brand-primary     : #000;
-$brand-secondary   : #000;
+$brand-primary     : #1e05c9;
+$brand-secondary   : #f0f0f0;
 
 $colors: (
   //----- Elements
