--- a/app/scss/settings/_settings.dimensions.scss
+++ b/app/scss/settings/_settings.dimensions.scss
@@ -1,4 +1,19 @@
 //----- Variables / Dimensions
+
+// Site Design
 $site-desk-design  : 1600px;
 $site-tab-design   : 768px;
-$site-mob-design   : 640px;
+$site-mob-design   : 750px;
+
+// // Site Wrappers
+// // Desktop
+// $l-site                : 1600px;
+// $l-content--primary    : 1200px;
+// $l-content--secondary  : 1050px; // Press, Partners
+// $l-content--tertiary   : 900px; // Partner single, Article, Fondation, Video, Static, 404, A few blocks on HP
+//
+// // Tablet
+// $l-content--primary-t  : 660px;
+//
+// // Mobile
+// $l-content--primary-t  : 626px;
