--- a/app/scss/settings/_settings.typography.scss
+++ b/app/scss/settings/_settings.typography.scss
@@ -15,13 +15,14 @@
 $fontDefault            : Arial, Helvetica, Tahoma, sans-serif;
 $font-family-primary    : 'Pinstripe-limo', $fontDefault;
 $font-family-secondary  : 'Eidetic-serif', $fontDefault;
+$font-family-tertiary   : 'Open Sans', $fontDefault;
 
-// //----- Font weight
-// $font-weight-regular  : 400;
-// $font-weight-bold     : 700;
+//----- Font weight
+$font-weight-regular    : 400;
+$font-weight-bold       : 700;
 
 //----- Font size
-$font-size-base            : 10px;
+$font-size-base         : 10px;
 
 //------GLOBAL FONT SETTINGS
 html {
