--- a/app/scss/core/_core.normalize.scss
+++ b/app/scss/core/_core.normalize.scss
@@ -466,3 +466,15 @@ template {
 [hidden] {
     display: none;
 }
+
+// // Iframe
+// //========================================================================== //
+//
+// //
+// // Add the correct display in Safari
+// //
+//
+// iframe {
+//     width: 1px;
+//     min-width: 100%;
+// }
