--- a/app/scss/lib/mixins/_mixin.placeholder.scss
+++ b/app/scss/lib/mixins/_mixin.placeholder.scss
@@ -7,8 +7,8 @@
 //   }
 // }
 @mixin placeholder {
-  ::-webkit-input-placeholder {@content}
-  :-moz-placeholder           {@content}
-  ::-moz-placeholder          {@content}
-  :-ms-input-placeholder      {@content}  
+  &::-webkit-input-placeholder {@content}
+  &:-moz-placeholder           {@content}
+  &::-moz-placeholder          {@content}
+  &:-ms-input-placeholder      {@content}
 }
