--- a/app/scss/settings/_settings.paths.scss
+++ b/app/scss/settings/_settings.paths.scss
@@ -19,4 +19,6 @@
 $fontBaseUrl   : "http://static1.webedia.fr/fonts/";
 // $localFontBase : "/_common/fonts";
 $localFontBase : "/assets/fonts/";
+$icomoon-font-path: "/assets/fonts/svg-font";
+// $icomoon-font-path: "/_common/fonts/svg-fonts";
 $imgBaseUrl    : "/_common/images";
