--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -13,6 +13,9 @@
 //------SETTINGS FOR PROJECT
 @import 'settings/all';
 
+//------Helpers
+@import 'helpers/all';
+
 //------BLOCKS
 @import 'blocks/all';
 
