--- a/app/scss/blocks/_b-header.scss
+++ b/app/scss/blocks/_b-header.scss
@@ -1,2 +1,22 @@
 //----- Header
-.b-header {}
+.b-header {
+  // position: fixed;
+  background-color: colorFunc(header, bg);
+
+  &__elements {}
+  &__sticky-wrap {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 12rem;
+  }
+  &__trigger {}
+  &__trigger--mob-sticky {
+    position: fixed;
+    background-color: colorFunc(nav-header, trigger);
+    height: 12rem;
+    width: 12rem;
+    left: 0;
+    top: 25rem;
+  }
+}
