--- a/app/scss/lib/mixins/_mixin.hide.scss
+++ b/app/scss/lib/mixins/_mixin.hide.scss
@@ -7,3 +7,15 @@
     }
   }
 }
+@mixin invisible($name) {
+  @if map-has-key($breakpoints, $name) {
+    @media #{inspect(map-get($breakpoints, $name))} {
+      width: 0;
+      height: 0;
+      position: absolute;
+      left: 0;
+      text-indent: -5000px;
+      overflow: hidden;
+    }
+  }
+}
