--- a/app/scss/settings/_settings.colors.scss
+++ b/app/scss/settings/_settings.colors.scss
@@ -1,42 +1,61 @@
 ///------------------------------------
-//    #SETTINGS
+// #SETTINGS
 //------------------------------------
 // Globaly available variables
 //-------------------------
-//    #Colors
-//    Global default settings
-//	  for colors
+// #Colors
+// Global default settings
+//	 for colors
 //-------------------------
 
 //----- Brand Main
-$brand-primary     : #1e05c9;
-$brand-secondary   : #f0f0f0;
+$brand-primary   : #1e05c9;
+$brand-secondary : #f0f0f0;
 
-$colors: (
+$colors          : (
   //----- Elements
-  link: ( //----- Link colors
-    text        : brand-primary,
-    text-hover  : brand-primary
+  header         : ( //----- header colors
+    bg           : #f4f4f4
   ),
-  text: ( //----- Text colors
-    primary     : brand-primary,
-    secondary   : brand-primary
+  footer         : ( //----- footer colors
+    bg           : #0f0077,
+    links        : #fff
   ),
-  border: ( //----- Border colors
-    primary     : brand-primary,
-    secondary   : brand-primary
+
+  nav-header     : ( //----- nav-header colors
+    bg-mask      : #33343f,
+    bg           : #130098,
+    trigger      : $brand-primary,
+    links        : #fff
   ),
-  error: ( //----- Error colors
-    background  : brand-primary,
-    text        : brand-primary
+
+  c-newsletter     : ( //----- c-newsletter colors
+    news-footer-bg      : #0d1f87,
+    place-c      : #7781bc
   ),
-  socials: ( //----- Socials colors
-    facebook    : #3B5998,
-    fb-messenger: #0084FF,
-    twitter     : #1DA1F2,
-    youtube     : #CD201F,
-    viber       : #7d51a0,
-    whatsapp    : #43D854
+  link           : ( //----- Link colors
+    text         : brand-primary,
+    text-hover   : brand-primary
+  ),
+  text           : ( //----- Text colors
+    primary      : brand-primary,
+    secondary    : brand-primary
+  ),
+  border         : ( //----- Border colors
+    primary      : brand-primary,
+    secondary    : brand-primary
+  ),
+  error          : ( //----- Error colors
+    background   : brand-primary,
+    text         : brand-primary
+  ),
+  socials        : ( //----- Socials colors
+    facebook     : #3B5998,
+    fb-messenger : #0084FF,
+    twitter      : #1DA1F2,
+    youtube      : #CD201F,
+    viber        : #7d51a0,
+    whatsapp     : #43D854
   )
 );
 
@@ -46,10 +65,10 @@ $colors: (
 // $buttonsLength: length($buttonsArray) + 1;
 // // In scss file
 // .c-btn {
-//   @for $soc from 1 to $buttonsLength {
-//     $currentButton: nth($buttonsArray, $soc);
-//     &--#{$currentButton} { // color
-//       color: colorFunc(socials, $currentButton);
-//     }
-//   }
+// @for $soc from 1 to $buttonsLength {
+// $currentButton: nth($buttonsArray, $soc);
+// &--#{$currentButton} { // color
+// color         : colorFunc(socials, $currentButton);
+// }
+// }
 // }
