--- a/app/scss/components/_all.scss
+++ b/app/scss/components/_all.scss
@@ -9,6 +9,7 @@
 // Navigations
 @import "c-navigations/c-nav-header";
 @import "c-navigations/c-nav-footer";
+@import "c-navigations/c-nav-trigger";
 
 // Socials
 @import "c-socials/c-soc-header";
