--- a/app/scss/components/_all.scss
+++ b/app/scss/components/_all.scss
@@ -5,6 +5,8 @@
 @import "c-hero";
 @import "c-search";
 @import "c-newsletter";
+@import "c-media";
+@import "c-program";
 
 // Navigations
 @import "c-navigations/c-nav-header";
