--- a/app/scss/blocks/_b-footer.scss
+++ b/app/scss/blocks/_b-footer.scss
@@ -15,7 +15,7 @@
     padding-bottom: 10rem;
   }
 
-  &__logo {
+  .c-logo {
     margin: 0 auto;
     @include breakpoint(desktop) {
       float: left;
