--- a/app/scss/components/_c-buttons.scss
+++ b/app/scss/components/_c-buttons.scss
@@ -1,2 +1,33 @@
 //----- Buttons
-.c-btn  {}
+.c-btn  {
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  border: 1px solid transparent;
+  -webkit-appearance: none;
+
+  font-family: $font-family-tertiary;
+  font-weight: $font-weight-bold;
+  @include font-size(10px, 10px, 21.7px);
+  @include line-height(25px, 14px, 25px);
+  text-transform: uppercase;
+  letter-spacing: 0.16rem;
+  @include vendor-prefixes(transition, all .3s);
+  border-radius: 1px;
+  width: 31.3rem;
+  height: 7.8rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  @include breakpoint(tablet) {
+    width: 14.4rem;
+    height: 3.6rem;
+  }
+  @include breakpoint(desktop) {
+    width: 18.2rem;
+    height: 4.5rem;
+  }
+
+  &:hover {
+    background-color: colorFunc(buttons, hover);
+  }
+}
