related && program blocks

--- a/app/scss/blocks/_b-header.scss
+++ b/app/scss/blocks/_b-header.scss
@@ -128,7 +128,7 @@
     @include breakpoint(desktop) {
       @include absolute(center-vertical);
       left: 18rem;
-      max-width: 15.5%;
+      max-width: 21rem;
     }
   }
 }
