--- a/app/scss/blocks/_b-footer.scss
+++ b/app/scss/blocks/_b-footer.scss
@@ -21,6 +21,7 @@
       float: left;
       width: 18.7%;
       margin-right: 12.5%;
+      margin-top: -1.5rem;
     }
     @include breakpoint(toDesktop) {
       width: 29%;
